--- a/src/scss/timely.scss
+++ b/src/scss/timely.scss
@@ -1,13 +1,12 @@
 $total-height: 35px;
-$line-color: #000000;
+$marker-color: #000000;
+$event-color: red;
 
 .timely {
   box-sizing: border-box;
   position: fixed;
   top: 0;
-  left: 50%;
   height: $total-height;
-  margin-left: -500px;
   font-size: 12px;
   z-index: 2;
 
@@ -39,7 +38,7 @@ ul.timely__groups {
 
     &:first-child {
       .timely__markers {
-        border-left: 1px solid $line-color;
+        border-left: 1px solid $marker-color;
       }
     }
   }
@@ -62,11 +61,11 @@ ul.timely__groups {
   top: 7px;
   width: 100%;
   height: 10px;
-  border-right: 1px solid $line-color;
+  border-right: 1px solid $marker-color;
 
   li {
     height: 100%;
-    border-right: 1px solid $line-color;
+    border-right: 1px solid $marker-color;
   }
 }
 
@@ -84,7 +83,8 @@ ul.timely__groups {
   position: absolute;
   top: -7px;
   width: 1px;
-  height: 13px;
+  height: 14px;
   margin-left: -1px;
-  background: $line-color;
+  background: $event-color;
+  z-index: 2;
 }
