update gulp sass

--- a/src/scss/timely.scss
+++ b/src/scss/timely.scss
@@ -79,7 +79,7 @@ ul.timely__groups {
   height: 5px;
 }
 
-.timely__event {
+.timely__markers--event {
   position: absolute;
   top: 0px;
   width: 1px;
